Siat Google Analytic

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ plugins:
   - jekyll-feed
 
 # Google Analytics
-google_analytics: G-TZPBG7KKJE
+google_analytics: G-Q9VC0MD1L5
 
 
 # Exclude from processing.
